tests/snapshots/regression/recovery__t16_module_missing_lbrace_contextual.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
exit_code: 1

• 1 error • tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
error[E034]: Missing Module Body

This module body needs to start with `{`.

  tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx:2:1
  |
2 | let after = 1
  | ^^^

Hint:
  Module declarations use `module Name { ... }`.

Note:
  while parsing module `Demo`
